# lamb-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  build.sh  bundler.toml  devenv.nix  install.sh  shell.nix
.github/workflows/: build.yml  readme-Linux.txt  readme-Windows.txt  readme-macOS.txt
dsp/: gain.dsp
nih-faust-macros/: Cargo.toml
nih-faust-macros/src/: lib.rs
src/: buffer.rs  dsp.rs  dsp_192k.rs  dsp_48k.rs  dsp_96k.rs  editor.rs  gain_reduction_meter.rs  lib.rs  main.rs  params.rs  params_auto.rs  style.css  xy_pad.rs
