[package]
name = "lamb"
version = "2.0.0"
edition = "2021"
authors = ["magnetophon <bart@magnetophon.nl>"]
license = "AGPL-3.0"
homepage = "magnetophon.nl"
description = "A lookahead compressor/limiter that's soft as a lamb"

[features]
faust-rebuild = ["dep:faust-build"]
default = ["default-boxed"]
default-boxed = ["dep:default-boxed"]

[workspace]
members = ["xtask"]

[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib", "lib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
faust-types = { git = "https://github.com/Frando/rust-faust" }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
atomic_float = "0.1"
default-boxed = { version = "0.2.0", optional=true }
cyma = { git = "https://github.com/223230/cyma.git" }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

# Generated code - high perf needed anyway
[profile.dev]
opt-level = 3

[build-dependencies]
# see: https://github.com/Frando/rust-faust/issues/23
# faust-build = { path = "../rust-faust/faust-build", optional = true }
faust-build = { git = "https://github.com/Frando/rust-faust", optional = true, branch = "feat_faust_build_set_struct_and_module_names" }
faust-types = { git = "https://github.com/Frando/rust-faust" }
default-boxed = { version = "0.2.0", optional=true }
